--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^7.4.0",
